--- a/Priorities/Priorities/Base.lproj/Main.storyboard
+++ b/Priorities/Priorities/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <stackView autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" placeholderIntrinsicWidth="354" placeholderIntrinsicHeight="748" axis="vertical" spacing="20" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LkE-ka-8CK">
                                 <rect key="frame" x="30" y="74" width="354" height="748"/>
                                 <subviews>
-                                    <view contentMode="scaleAspectFit" horizontalHuggingPriority="350" verticalHuggingPriority="750" horizontalCompressionResistancePriority="100" translatesAutoresizingMaskIntoConstraints="NO" id="Qbi-eN-t40" customClass="CountryHeaderView" customModule="Priorities" customModuleProvider="target">
+                                    <view contentMode="scaleAspectFit" horizontalHuggingPriority="350" verticalHuggingPriority="750" horizontalCompressionResistancePriority="100" verticalCompressionResistancePriority="790" placeholderIntrinsicWidth="354" placeholderIntrinsicHeight="336" translatesAutoresizingMaskIntoConstraints="NO" id="Qbi-eN-t40" customClass="CountryHeaderView" customModule="Priorities" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="354" height="336"/>
                                         <color key="backgroundColor" name="headerStart"/>
                                     </view>
@@ -30,8 +30,8 @@
                                             <view contentMode="scaleToFill" horizontalHuggingPriority="200" placeholderIntrinsicWidth="184" placeholderIntrinsicHeight="128" translatesAutoresizingMaskIntoConstraints="NO" id="Fb1-9n-bKE">
                                                 <rect key="frame" x="0.0" y="0.0" width="172" height="192"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnv-WS-8qL">
-                                                        <rect key="frame" x="113" y="24" width="33.5" height="138"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMF-Cc-cUh">
+                                                        <rect key="frame" x="100.5" y="40" width="41.5" height="112"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -39,51 +39,26 @@
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="bnv-WS-8qL" secondAttribute="trailing" constant="25.5" id="9hg-GR-Mif"/>
-                                                    <constraint firstItem="bnv-WS-8qL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Fb1-9n-bKE" secondAttribute="leading" constant="20" symbolic="YES" id="EW6-Yb-0Di"/>
-                                                    <constraint firstItem="bnv-WS-8qL" firstAttribute="top" secondItem="Fb1-9n-bKE" secondAttribute="top" constant="24" id="OkA-MO-KhR"/>
-                                                    <constraint firstAttribute="bottom" secondItem="bnv-WS-8qL" secondAttribute="bottom" constant="30" id="XvU-Oo-nLX"/>
+                                                    <constraint firstItem="XMF-Cc-cUh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Fb1-9n-bKE" secondAttribute="leading" symbolic="YES" id="78P-fd-i7x"/>
+                                                    <constraint firstItem="XMF-Cc-cUh" firstAttribute="top" secondItem="Fb1-9n-bKE" secondAttribute="top" constant="40" id="9NR-iF-dxV"/>
+                                                    <constraint firstAttribute="bottom" secondItem="XMF-Cc-cUh" secondAttribute="bottom" constant="40" id="TiZ-Tb-ahW"/>
+                                                    <constraint firstAttribute="trailing" secondItem="XMF-Cc-cUh" secondAttribute="trailing" constant="30" id="XNK-CK-b0f"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wzo-Eq-faj">
+                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="172" placeholderIntrinsicHeight="192" translatesAutoresizingMaskIntoConstraints="NO" id="Wzo-Eq-faj">
                                                 <rect key="frame" x="182" y="0.0" width="172" height="192"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Second" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbD-1V-P22">
-                                                        <rect key="frame" x="30" y="30" width="58" height="132"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
                                                 <color key="backgroundColor" name="ticketStart"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="WbD-1V-P22" secondAttribute="bottom" constant="30" id="8UI-fO-Dy7"/>
-                                                    <constraint firstItem="WbD-1V-P22" firstAttribute="leading" secondItem="Wzo-Eq-faj" secondAttribute="leading" constant="30" id="hM4-ge-HWj"/>
-                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WbD-1V-P22" secondAttribute="trailing" symbolic="YES" id="iXO-iZ-6uU"/>
-                                                    <constraint firstItem="WbD-1V-P22" firstAttribute="top" secondItem="Wzo-Eq-faj" secondAttribute="top" constant="30" id="rtD-9g-jtj"/>
-                                                </constraints>
                                             </view>
                                         </subviews>
                                     </stackView>
-                                    <view contentMode="scaleAspectFit" verticalHuggingPriority="750" layoutMarginsFollowReadableWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cjy-XL-3wC">
+                                    <view contentMode="scaleAspectFit" verticalHuggingPriority="750" layoutMarginsFollowReadableWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cjy-XL-3wC" customClass="SecondView" customModule="Priorities" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="568" width="354" height="180"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Third" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nXa-zR-tBV">
-                                                <rect key="frame" x="80" y="48" width="39.5" height="122"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemTealColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="nXa-zR-tBV" secondAttribute="bottom" constant="10" id="69w-Bh-rJD"/>
-                                            <constraint firstItem="nXa-zR-tBV" firstAttribute="leading" secondItem="Cjy-XL-3wC" secondAttribute="leading" constant="80" id="6Sp-GY-wuS"/>
-                                            <constraint firstItem="nXa-zR-tBV" firstAttribute="top" secondItem="Cjy-XL-3wC" secondAttribute="top" constant="48" id="aOR-wu-H7F"/>
-                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="nXa-zR-tBV" secondAttribute="trailing" constant="20" symbolic="YES" id="uQ5-DM-oOk"/>
-                                        </constraints>
                                     </view>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Cjy-XL-3wC" firstAttribute="width" secondItem="LkE-ka-8CK" secondAttribute="width" id="Ykz-7i-DgJ"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
