--- a/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
+++ b/Water Reminder/Water Reminder/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bYn-4T-St9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bYn-4T-St9">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -127,17 +127,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" clipsSubviews="YES" contentMode="top" axis="vertical" alignment="top" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="z30-b4-OK1">
+                            <stackView opaque="NO" clipsSubviews="YES" contentMode="top" axis="vertical" distribution="equalCentering" alignment="center" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="z30-b4-OK1">
                                 <rect key="frame" x="20" y="20" width="280" height="508"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recommended amount of water a day" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="13" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cM2-xE-CNc">
-                                        <rect key="frame" x="0.0" y="0.0" width="242.5" height="48"/>
+                                        <rect key="frame" x="19" y="0.0" width="242.5" height="48"/>
                                         <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="26"/>
                                         <color key="textColor" name="TextBlue"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="245" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Vg6-F2-0SZ">
-                                        <rect key="frame" x="0.0" y="75" width="140" height="40"/>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="245" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Vg6-F2-0SZ">
+                                        <rect key="frame" x="70" y="75" width="140" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="140" id="4jT-mQ-0rW"/>
                                             <constraint firstAttribute="height" constant="40" id="83s-hc-IKC"/>
@@ -147,7 +147,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="odl-tS-vKn">
-                                        <rect key="frame" x="0.0" y="142" width="127" height="36"/>
+                                        <rect key="frame" x="76.5" y="148.5" width="127" height="36"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="PbR-PN-h5s"/>
@@ -159,13 +159,13 @@
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="755" text="Set your bodyweight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCA-Jx-Nr9">
-                                        <rect key="frame" x="0.0" y="204" width="132" height="16.5"/>
+                                        <rect key="frame" x="74" y="217.5" width="132" height="16.5"/>
                                         <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="18"/>
                                         <color key="textColor" name="TextBlue"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="256" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v7S-HA-NaO">
-                                        <rect key="frame" x="0.0" y="247.5" width="97" height="40"/>
+                                        <rect key="frame" x="91.5" y="261" width="97" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="97" id="M05-RK-12O"/>
                                             <constraint firstAttribute="height" constant="40" id="O4Y-P6-ePd"/>
@@ -174,7 +174,7 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set hours of fitness activity per day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mGb-ei-Efg">
-                                        <rect key="frame" x="0.0" y="314.5" width="233.5" height="12"/>
+                                        <rect key="frame" x="23.5" y="328" width="233.5" height="12"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="12" id="pWd-Da-BqC"/>
                                         </constraints>
@@ -182,8 +182,8 @@
                                         <color key="textColor" name="TextBlue"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fse-qg-gau">
-                                        <rect key="frame" x="0.0" y="353.5" width="153" height="25"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fse-qg-gau">
+                                        <rect key="frame" x="63.5" y="367" width="153" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="153" id="Sj7-7Z-A6P"/>
                                             <constraint firstAttribute="height" constant="25" id="hOP-Ja-50A"/>
@@ -193,23 +193,23 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="24" stepValue="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="jbs-ar-zLx">
-                                        <rect key="frame" x="0.0" y="405.5" width="94" height="32"/>
+                                        <rect key="frame" x="93" y="419" width="94" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="t5w-bO-TLg"/>
                                         </constraints>
                                     </stepper>
-                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="760" alignment="center" spacing="87" translatesAutoresizingMaskIntoConstraints="NO" id="m4T-Ny-Kj4">
-                                        <rect key="frame" x="0.0" y="464.5" width="280" height="43.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="760" distribution="fillEqually" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="m4T-Ny-Kj4">
+                                        <rect key="frame" x="8" y="478" width="264" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1zs-gL-SMh">
-                                                <rect key="frame" x="0.0" y="7" width="76" height="30"/>
-                                                <state key="normal" title="       Cancel"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="117" height="30"/>
+                                                <state key="normal" title="Cancel"/>
                                                 <connections>
                                                     <action selector="cancelUserData:" destination="P4D-VI-T1l" eventType="touchUpInside" id="jXe-zH-TKo"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UfC-OZ-O22">
-                                                <rect key="frame" x="163" y="7" width="117" height="30"/>
+                                                <rect key="frame" x="147" y="0.0" width="117" height="30"/>
                                                 <state key="normal" title="Confirm changes"/>
                                                 <connections>
                                                     <action selector="buttonConfirmUser:" destination="P4D-VI-T1l" eventType="touchUpInside" id="5zf-Zd-NhB"/>
@@ -219,6 +219,9 @@
                                         <color key="tintColor" name="buttonBlue"/>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="odl-tS-vKn" firstAttribute="centerX" secondItem="z30-b4-OK1" secondAttribute="centerX" id="UVD-iH-BEQ"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bNg-pa-IlY"/>
