--- a/MVVMaApp/MVVMApp/View/BookCollectionViewCell.xib
+++ b/MVVMaApp/MVVMApp/View/BookCollectionViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,55 +11,58 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BookCollectionViewCell" id="gTV-IL-0wX" customClass="BookCollectionViewCell" customModule="MVVMApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="96" height="187"/>
+            <rect key="frame" x="0.0" y="0.0" width="125" height="187"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="96" height="187"/>
+                <rect key="frame" x="0.0" y="0.0" width="125" height="187"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Up3-gS-hAm">
-                        <rect key="frame" x="0.0" y="0.0" width="96" height="187"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mRY-CG-3Sz">
-                                <rect key="frame" x="0.0" y="0.0" width="96" height="109"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEp-YS-Opc">
-                                <rect key="frame" x="0.0" y="109" width="96" height="61"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                <color key="textColor" systemColor="systemGray6Color"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7a-EA-qw0">
-                                <rect key="frame" x="0.0" y="170" width="96" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
-                                <color key="textColor" systemColor="secondaryLabelColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mRY-CG-3Sz">
+                        <rect key="frame" x="0.0" y="0.0" width="125" height="131"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="125" id="5tt-ng-YPx"/>
+                            <constraint firstAttribute="height" constant="131" id="kYl-no-mMZ"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7a-EA-qw0">
+                        <rect key="frame" x="0.0" y="170" width="125" height="17"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                        <color key="textColor" white="0.74605899035525158" alpha="0.84526903973509937" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hEp-YS-Opc">
+                        <rect key="frame" x="0.0" y="129" width="109" height="40"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                        <color key="textColor" systemColor="systemGray6Color"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Up3-gS-hAm" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="NMI-fl-afL"/>
-                <constraint firstItem="Up3-gS-hAm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Pud-wk-jeu"/>
-                <constraint firstAttribute="trailing" secondItem="Up3-gS-hAm" secondAttribute="trailing" id="V5k-89-mn9"/>
-                <constraint firstAttribute="bottom" secondItem="Up3-gS-hAm" secondAttribute="bottom" id="h0y-Pz-wyK"/>
+                <constraint firstAttribute="bottom" secondItem="z7a-EA-qw0" secondAttribute="bottom" id="L83-Lj-X7J"/>
+                <constraint firstItem="hEp-YS-Opc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="NU4-AV-NuK"/>
+                <constraint firstItem="mRY-CG-3Sz" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="UXe-ux-qpB"/>
+                <constraint firstAttribute="trailing" secondItem="z7a-EA-qw0" secondAttribute="trailing" id="Z8r-8Z-WbS"/>
+                <constraint firstAttribute="trailing" secondItem="mRY-CG-3Sz" secondAttribute="trailing" id="fDf-V9-Ach"/>
+                <constraint firstAttribute="trailing" secondItem="hEp-YS-Opc" secondAttribute="trailing" id="pZl-0q-C9Y"/>
+                <constraint firstItem="z7a-EA-qw0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tKl-OK-inX"/>
+                <constraint firstItem="mRY-CG-3Sz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="tRi-xT-d5N"/>
+                <constraint firstItem="z7a-EA-qw0" firstAttribute="top" secondItem="mRY-CG-3Sz" secondAttribute="bottom" constant="39" id="tf3-SG-3KS"/>
+                <constraint firstItem="z7a-EA-qw0" firstAttribute="top" secondItem="hEp-YS-Opc" secondAttribute="bottom" constant="1" id="w2m-z8-CU9"/>
+                <constraint firstItem="z7a-EA-qw0" firstAttribute="top" secondItem="hEp-YS-Opc" secondAttribute="bottom" constant="1" id="z1x-f4-qZ2"/>
             </constraints>
-            <size key="customSize" width="96" height="187"/>
+            <size key="customSize" width="109" height="187"/>
             <connections>
                 <outlet property="authorLabel" destination="z7a-EA-qw0" id="BH0-VB-yMt"/>
                 <outlet property="bookImage" destination="mRY-CG-3Sz" id="0Xa-R6-G1L"/>
                 <outlet property="nameLabel" destination="hEp-YS-Opc" id="9dV-SF-nbh"/>
             </connections>
-            <point key="canvasLocation" x="-115.94202898550725" y="122.20982142857142"/>
+            <point key="canvasLocation" x="-106.5217391304348" y="122.20982142857142"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="secondaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
